--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
-main{
-    padding: 0;
+@import "resetCss";
+
+body {
+  background-color: #f8f7f7;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
