--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,5 +2,32 @@
 
 body {
   background-color: #f8f7f7;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 50px;
+}
+
+.canvas {
+  width: 700px;
+  height: 700px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+}
+
+.controles{
+    &__color{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+        cursor: pointer;
+    }
+    &__colors{
+        display: flex;
+        flex-direction: row;
+    }
 }
