--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,15 +19,46 @@ body {
 }
 
 .controles {
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   &__color {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
     cursor: pointer;
+    margin: 8px;
   }
   &__colors {
     display: flex;
     flex-direction: row;
+  }
+  &__btns {
+    margin-bottom: 30px;
+    button {
+      all: unset;
+      cursor: pointer;
+      padding: 5px 0;
+      width: 80px;
+      border-radius: 8px;
+      border: 1px solid #eeeeee;
+      text-align: center;
+      background-color: #ffffff;
+      box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+      font-size: 18px;
+      color: rgba(0, 0, 0, 0.5);
+      margin: 0 5px;
+      transition: all 0.3s;
+      &:focus{
+          transform: scale(1.1);
+          color: rgba(0, 0, 0, 1);
+          font-weight: bold;
+      }
+    }
+  }
+  &__range{
+      margin-bottom: 20px;
   }
 }
